# mac-dev-setup

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .releaserc.json  404.html  README.md  apps.html  genindex.html  git.html  index.html  jetbrains.html  mac_settings.html  mkdocs.yaml  mkdocs.yml  objects.inv  productivity.html  pyproject.toml  python.html  references.html  requirements.txt  search.html  searchindex.js  startup.html  terminal.html  tox.ini
.doctrees/: apps.doctree  environment.pickle  git.doctree  index.doctree  jetbrains.doctree  mac_settings.doctree  productivity.doctree  python.doctree  references.doctree  startup.doctree  terminal.doctree
.github/workflows/: docs.yaml  labeler.yaml  release.yaml
_sources/: apps.md.txt  index.md.txt  productivity.md.txt  python.md.txt  references.md.txt  terminal.md.txt
apps/: index.html
docs/: apps.md  aws.md  conf.py  gen_pages.py  git.md  index.md  jetbrains.md  linux.md  productivity.md  python.md  references.md  requirements.txt  silicon.md  ssh.md  startup.md  terminal.md
docs/dot_files/: .zsh_aliases  .zshenv  .zshrc  zsh_aliases.txt  zsh_aliases.zsh  zshrc.txt
docs/source/: apps.md  jetbrains.md  mac_settings.md  startup.md
docs/source/_templates/: page.html
git/: index.html
jetbrains/: index.html
jetbrains/settings/: installed.txt
jetbrains/settings/colors/: _@user_Darcula.icls
jetbrains/settings/options/: PyDocumentationSettings.xml  csv-plugin.xml  databaseDrivers.xml  diff.xml  filetypes.xml  ide.general.xml  ignore.xml  material_theme.xml  project.default.xml  rainbow_brackets.xml  remote-servers.xml  sonarlint.xml
mac_settings/: index.html
productivity/: index.html
python/: index.html
references/: index.html
requirements/: requirements-docs.txt
search/: search_index.json
startup/: index.html
terminal/: index.html
(+8 files in other folders)
