[tool.poetry]
name = "mac-dev-setup"
version = "0.1.0"
description = "juftin's Development Setup"
authors = ["juftin <juftin@juftin.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.3.1"
mkdocs-material = "^8.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
