[tool.poetry]
name = "mac-dev-setup"
description = "juftin's Development Setup"
version = "0.1.3"
authors = ["Justin Flannery <juftin@juftin.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/juftin/mac-dev-setup"
repository = "https://github.com/juftin/mac-dev-setup"
documentation = "https://juftin.github.io/mac-dev-setup"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"

[tool.poetry.dev-dependencies]
mkdocs = "^1.4.0"
mkdocs-material = "^8.5.6"

[tool.poetry.urls]
Changelog = "https://github.com/juftin/mac-dev-setup/releases"
