[project]
authors = [
  {name = "Justin Flannery", email = "juftin@juftin.com"}
]
dynamic = ["version"]
dependencies = []
license = "MIT"
name = "mac-dev-setup"
readme = "README.md"
requires-python = ">=3.8"

[tool.hatch.env]
requires = ["hatch-pip-compile", "hatch-mkdocs"]

[tool.hatch.env.collectors.mkdocs.docs]
path = "mkdocs.yaml"

[tool.hatch.envs.docs]
type = "pip-compile"
lock-filename = "requirements.txt"

[tool.hatch.version]
path = ".github/VERSION"
